--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,4 +6,12 @@
   body {
     @apply bg-gray-700 text-gray-100;
   }
+
+  a {
+    @apply cursor-pointer hover:underline;
+  }
+
+  button {
+    @apply cursor-pointer;
+  }
 }
